monitoring/controllers/base/uptimekuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimekuma
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptimekuma
  template:
    metadata:
      labels:
        app: uptimekuma
    spec:
      # securityContext:
      #   runAsUser: 1000
      #   runAsGroup: 1000
      containers:
        - name: uptimekuma
          image: louislam/uptime-kuma:2.5.6
          ports:
            - containerPort: 3001
              # protocol: TCP
          # securityContext:
          #   allowPrivilegeEscalation: false
          volumeMounts:
            - name: uptimekuma-data-pvc
              mountPath: /app/data
      volumes:
        - name: uptimekuma-data-pvc
          persistentVolumeClaim:
            claimName: uptimekuma-data-pvc
      restartPolicy: Always
