monitoring/controllers/base/uptimekuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: uptimekuma
  type: ClusterIP
