monitoring/controllers/base/uptimekuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptimekuma
spec:
  ingressClassName: traefik
  rules:
  - host: "uptimekuma.kubeklepsch.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uptimekuma
            port:
              number: 3001
